--- a/sgvizler-www.css
+++ b/sgvizler-www.css
@@ -18,20 +18,29 @@ h1.title {
     text-align: center;
 }
 
-div#table-of-contents {
+div#menu {
     position: fixed;
-    top: 20px;
+    top: 15px;
     right: 10px;
     background-color: #fff;
     opacity: 0.8;
-}
-div#text-table-of-contents {
     font-size: 80%;
 }
+div#menu ul {
+    margin: 2px 0px 10px 16px;
+    padding: 0;
+}
+
+div#quick-links::before {
+    content: "Quick links";
+    font-weight: bold;
+}
 div#table-of-contents h2 {
-    font-size: 100%;
-    border-bottom: 0;
-    margin: 0;
+    display: none;
+}
+div#text-table-of-contents::before {
+    content: "Contents";
+    font-weight: bold;
 }
 
 
